# Onboard-SDK

./: main.cpp
examples/: detector.c
osdk-core/modules/src/flight/: dji_flight_assistant_module.cpp
sample/core/src/: flight_sample.cpp
sample/platform/linux/advanced-sensing/camera_stream_poll_sample/: CMakeLists.txt  camera-stream-poll-sample.cpp
sample/platform/linux/advanced-sensing/camera_stream_target_tracking_sample/: CMakeLists.txt  target_tracking.cpp  tracking_utility.cpp  tracking_utility.hpp
sample/platform/linux/advanced-sensing/camera_stream_target_tracking_sample/KCFcpp/src/: kcftracker.cpp
sample/platform/linux/advanced-sensing/stereo_vision_depth_perception_sample/: stereo_vision_depth_perception_sample.cpp
sample/platform/linux/advanced-sensing/stereo_vision_new_sample/: main.cpp
sample/platform/linux/common/: UserConfig.txt
sample/platform/linux/flight-control/: CMakeLists.txt  flight_control_sample.cpp  flight_control_sample.hpp  main.cpp
tmp/: img.cpp  setposition.sh
